# colorful-gol-rs

./: .rustfmt.toml  Cargo.toml  README.md
src/: application.rs  main.rs  renderer.rs
src/shaders/: main.glsl  mod.rs
