[package]
name = "color-gol-rs"
version = "0.1.0"
authors = ["Fun Maker <funmaker95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.17"
vulkano-shaders = "0.17"
vulkano-win = "0.17"
winit = "0.21"
